--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "bootstrap": "5.3.3",
     "bootswatch": "5.3.3",
     "dayjs": "1.11.13",
+    "jhipster-core": "^7.3.4",
     "lodash": "4.17.21",
     "path-browserify": "1.0.1",
     "react": "18.3.1",
